--- a/assets/CSS/contactcss.css
+++ b/assets/CSS/contactcss.css
@@ -8,62 +8,10 @@ body{
 /*Main Header*/
 
 
-.main-header {
-    background-color: #FFF;
-    height: 60px;
-    width: 100%;
-    position: fixed;
-    padding:0 0 0 0;
-    margin:0 0 0 0;
-    z-index:1;
-
-}
-.your-name {
-    float: left;
-    height:60px;
-    background-color:#11847e;
-    color:#FFF;
-    
-}
-.your-name h1{
-    
-    font-size: 25px;
-    line-height: 1.1;
-    font-weight:500;
-    vertical-align:text-bottom;
-}
-
-
-.header-links {
-
-    height:60px;
-}
-.header-links ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #fff;
-    color:#c3c5c9;
-}
-
-.header-links ul li {
-    float: left;
-    height:60px;
-}
-
-.header-links ul li a {
-    display: block;
-    height: 60px;
-    color: #41464B;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-.header-links ul li a:hover {
+.navbar-nav li a:hover {
     background-color: #11847e;
     color:#fff;
+    
 
 }
   
@@ -73,8 +21,14 @@ body{
     margin: 100px 0 200px 0;
     width:64%;
     background-color:#fff;
+    position: relative;
+    left:50%;
+    transform: translate(-50%);
+    border-radius: 25px;
+    border: 10px solid  #b2dfdb  ;
 }
 .contact-title {
+    text-align: center;
     color:#11847e;
     font-size:20px;
     Padding: 20px;
@@ -84,14 +38,11 @@ body{
     height:3px;
     background-color:#c3c5c9;
     width:100%;
+    margin-bottom:25px;
 
 }
 
-.contact-2 {
-    margin: 100px 0 200px 0;
-    width:100%;
-    background-color:#fff;
-}
+
 
 
 /* footer*/
@@ -114,24 +65,35 @@ body{
     font-size:10px;
     font-weight: 100;
     color:#fff;
-    padding:35px 0 0 0;
+    
     text-align: center;
 
 }
 /* navbar  */
-.navbar {
-    width:100%;
-}
-.navbar-wrapper {
-    padding:0 0 0 0;
-    
-    width:100%;
-    position: relative;
-    right:0;
-    left:0;
 
-}
-.navbar-dark{
+
+.navbar {
+    background-color: #11847e;
+    color:black;
+    position: fixed;
+    top:0;
+    z-index: 4;
     
-    height: 60px;
+}
+.navbar-toggler{
+    margin:10px;
+}
+.header-name {
+    margin-right:10px;
+    color:#fff;
+    text-align: center;
+}
+
+.nav-item { 
+    height:54px;
+    padding:0 10px 0 10px;
+}
+.nav-link {
+    height:54px;
+   
 }
