--- a/assets/CSS/style css.css
+++ b/assets/CSS/style css.css
@@ -7,65 +7,16 @@ font-family: 'Roboto Condensed', sans-serif;
 
 /*Main Header*/
 
-#header-id {
-    width:100%;
-}
-.main-header {
-    background-color: #FFF;
-    height: 60px;
-    width: 100%;
-    position: fixed;
-    padding:0 0 0 0;
-    margin:0 0 0 0;
-    z-index:1;
-
-}
-.your-name {
-    float: left;
-    height:60px;
-    background-color:#11847e;
-    color:#FFF;
-    
-}
-.your-name h1{
-    
-    font-size: 25px;
-    line-height: 1.1;
-    font-weight:500;
-    vertical-align:text-bottom;
-}
 
 
-.header-links {
 
-    height:60px;
-}
-.header-links ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #fff;
-    color:#c3c5c9;
-}
 
-.header-links ul li {
-    float: left;
-    height:60px;
-}
 
-.header-links ul li a {
-    display: block;
-    height: 60px;
-    color: #41464B;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
 
-.header-links ul li a:hover {
+.navbar-nav li a:hover {
     background-color: #11847e;
     color:#fff;
+    
 
 }
   
@@ -73,22 +24,31 @@ font-family: 'Roboto Condensed', sans-serif;
 
 /* about me*/
 .main-body{
+    border-radius: 25px;
+    border: 10px solid  #b2dfdb  ;
     margin: 100px 0 200px 0;
     padding: 0 0 0 0;
     background-color:#fff;
-
+   
 }
 
-.main-body-title h1{
+.main-body-title h2{
+    
         color:#11847e;
-        font-size:20px;
+        font-size:30px;
         Padding: 20px;
+        font-weight: 500;
 }
-.left {
+.img-wrapper-main{
     float:left;
-    margin-right: 1em;
-    padding:0 0 0 0;
+    border-radius: 25px;
+    background: url("../images/kitty.jpg");
+    background-size: cover;
+    padding: 20px; 
+    width: 150px;
+    height: 150px;
 }
+
 .words {
     line-height: 1.5;
 }
@@ -120,28 +80,40 @@ font-family: 'Roboto Condensed', sans-serif;
     font-size:10px;
     font-weight: 100;
     color:#fff;
-    padding:35px 0 0 0;
-
+    
+    text-align: center;
 }
 
 /* navbar  */
 
-.navbar-wrapper {
-    padding:0 0 0 0;
-    
-    width:100%;
-    position: relative;
-    right:0;
-    left:0;
-
-}
-.navbar-dark{
-    
-    height: 60px;
-}
 
 .navbar {
-    width:100%;
-
+    background-color: #11847e;
+    color:black;
+    position: fixed;
+    top:0;
+    z-index: 4;
     
 }
+.navbar-toggler{
+    margin:10px;
+}
+.header-name {
+    margin-right:10px;
+    color:#fff;
+    text-align: center;
+}
+
+.nav-item { 
+    height:54px;
+    padding:0 10px 0 10px;
+}
+.nav-link {
+    height:54px;
+   
+}
+
+
+
+
+
